--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img class="oeil" src="imagerie/oeil.png" width="150" height="200" class="rounded float-left" alt="oeil">
+        <img class="oeil" src="imagerie/Oeil.png" width="150" height="200" class="rounded float-left" alt="oeil">
 
         <h3>Diagnostique</h3>
         <center><p>Nous examinons le véhicule sur plus de 100 points de contrôle.</p></center>
