--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <address class="address"> Station F <br>
              5 Parvis Alan Turing <br>
              Paris<br>
-             <a href="mailto:hello.leazy@gmail.com">
+             <a href="mailto:hello.leazy@gmail.com"> Nous contacter</a>
     </address>
     
     </div>
